--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ rvm:
 notifications:
   email:
     recipients:
-    - smbambling@gmail.com
+    - admin@arin.net 
     on_success: change
     on_failure: always
 script:
@@ -28,7 +28,7 @@ deploy:
     rvm: 2.1
     rvm: 2.2
     rvm: 2.3.0
-    repo: smbambling/sensu-plugins-jolokia
+    repo: arineng/sensu-plugins-jolokia
 addons:
     code_climate:
           repo_token:
